AUV_ws/log/build_2020-10-15_13-57-17/gate_detection/stderr.log
  File "/home/fatma/AUV_ws/install/gate_detection/lib/python3.6/site-packages/gate_detection/server_node.py", line 152
    self.x_center= 0.5*self.x_arr[bindx]0.5*self.x_arr[indx1]
                                          ^
SyntaxError: invalid syntax

